vlib/v/parser/tests/embed_file_in_inactive_comptime_if_branch_not_evaluated.vv
fn inactive_branch_embed_is_not_evaluated() {
	_ := 0 == ($if missing ? {
		$embed_file(@FILE).len
	} $else {
		0
	})
}

fn main() {
	assert missing_symbol == 0
}
